@@ -35,3 +35,4 @@ Legend:
 ! Ticket #2991, Fix loading of MicroDVD subtitles
 ! Ticket #3001, "After Playback": Always give "Once" events a higher priority than "Always" events
 ! Ticket #3023, "File -> Load Subtitle" didn't work anymore for DVD
+! Ticket #3045, Go to dialog: Fix frame rate detection for DVDs
